--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 <h1>CutShack</h1>
 <h2>Fonts not allowed:</h2>
 <b>Any Font not in English is not allowed. If you would like one in another language message me on <a href="https://cutshack.github.io">Etsy</a></b>
-<p>Matangi
-WDXL Lubrifont
-Noto Sans Japanese
-Huninn
-LXGW Marker
-Poppins
-Chiron Sung HK
-Noto Sans Korean
-Kanit
-Noto Sans Traditional Chinese
-Hind Siliguri
-Exile
+<p>-Matangi<br>
+-WDXL Lubrifont<br>
+-Noto Sans Japanese<br>
+-Huninn<br>
+-LXGW Marker<br>
+-Poppins<br>
+-Chiron Sung HK<br>
+-Noto Sans Korean<br>
+-Kanit<br>
+-Noto Sans Traditional Chinese<br>
+-Hind Siliguri<br>
+-Exile<br>
 
 
 
